<resources>
    <string name="app_name">XR-Assist</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Contacts</string>
    <string name="title_dashboard">Knowledge Bank</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabbed">XR-Assist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="expert_list">Expert List</string>
    <string name="select_product">Select Product</string>
    <string name="select_model">Select Model</string>
    <string name="filter">Filter</string>
    <string name="close">Close</string>
    <string name="call_brief">Call brief</string>


    <string name="random_txt">actually any motor part for that matter, who does it? I mean themselves not sending it out to a motor shop.</string>
    <string name="timestamp">Firday 11 December 2018, 12:57 PM</string>
    <string name="callLogs">Call Logs</string>
    <string name="shared_items">Shared Items</string>
    <string name="name">User Name</string>
    <string name="designation">Designation</string>
    <string name="email">user@xrlabs.co</string>
    <string name="location">Office</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_password">Create your new password!</string>
    <string name="current_password">Enter your current password</string>
    <string name="new_password">Enter your new password</string>
    <string name="confirm">Confirm</string>

    <string name="title_activity_change_profile_pic">ChangeProfilePic</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cam_hint">Hi, take a snap and upload your profile picture</string>

    <string name="title_activity_calling">Calling</string>
    <string name="gallery">OR slide up for Gallery</string>

    <string name="title_activity_camera_preview">CameraPreview</string>
    <string name="calling_txt">CALLING</string>
</resources>
