<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.users.Profile_Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/cameraIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circular_image_view"
                android:elevation="15dp"
                android:src="@drawable/icon_person"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/editProfilePic"
                android:layout_width="37.5dp"
                android:layout_height="37.5dp"
                android:layout_marginStart="144dp"
                android:src="@android:drawable/ic_menu_edit"
                app:layout_constraintBottom_toBottomOf="@+id/cameraIcon"
                app:layout_constraintStart_toStartOf="@+id/cameraIcon"
                app:layout_constraintTop_toTopOf="@+id/cameraIcon"
                app:layout_constraintVertical_bias="0.507" />


            <TextView
                android:id="@+id/userNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="@+id/cameraIcon"
                app:layout_constraintStart_toStartOf="@+id/cameraIcon"
                app:layout_constraintTop_toBottomOf="@+id/cameraIcon" />

            <TextView
                android:id="@+id/designationTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/designation"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/userNameTxt"
                app:layout_constraintStart_toStartOf="@+id/userNameTxt"
                app:layout_constraintTop_toBottomOf="@+id/userNameTxt" />


            <ImageView
                android:id="@+id/mailIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/icon_mail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/designationTxt" />

            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/mailIcon"
                app:layout_constraintTop_toBottomOf="@+id/designationTxt" />

            <TextView
                android:id="@+id/locationTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:text="@string/location"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/mailIcon"
                app:layout_constraintTop_toBottomOf="@+id/emailTxt" />


            <ImageView
                android:id="@+id/keyIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:src="@drawable/icon_key"
                app:layout_constraintEnd_toEndOf="@+id/mailIcon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/mailIcon"
                app:layout_constraintTop_toBottomOf="@+id/mailIcon" />

            <TextView
                android:id="@+id/passwordTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:text="@string/password"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/keyIcon"
                app:layout_constraintTop_toBottomOf="@+id/locationTxt" />

            <ImageView
                android:id="@+id/signoutIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:src="@drawable/icon_signout"
                app:layout_constraintEnd_toEndOf="@+id/keyIcon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/keyIcon"
                app:layout_constraintTop_toBottomOf="@+id/keyIcon" />

            <TextView
                android:id="@+id/signOutTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:text="@string/sign_out"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/signoutIcon"
                app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>